Dont add byebug

--- a/views/features.html
+++ b/views/features.html
@@ -2,7 +2,7 @@
       <div class="container">
         <ul class="pull-left">
           <li><a href="#"><img src="http://cdn.shopify.com/s/files/1/0536/7125/files/wider-logo.jpg" class="logo-img"/></a></li>
-          <li><a href="/features">Features</a></li>
+          <li><a href="#">Features</a></li>
         </ul>
         <ul class="pull-right">
           <li><a href="#"></a></li>
@@ -11,29 +11,7 @@
       </div>
     </div>
     
-    <div class="jumbotron2">
-      <div class="container">
-        <div class="setup">
-            <h1>Preview</h1>
-            <div class="preview-window">
-              <div class="noticebar-setup">
-                <div class="container">
-                  <a href="http://notice-bar.herokuapp.com"><img src="http://cdn.shopify.com/s/files/1/0536/7125/files/header-logo.png?8"/></a>
-                  <p>This is the notice at the top of the page. <a href="#">Click Here</a></p>
-                </div>
-              </div>
-            </div>    
-          <div class="preview-input">
-              <form class="preview-form">
-                <p>Heading Text: <input type="text" name="heading-text"><br></p>
-                <p>Link Text: <input type="text" name="link-name"></p>
-                <p>Link Address: <input type="text" name="link-address"></p>
-                <a href="#"><p>Save<p></a>
-              </form>
-          </div>    
-        </div>
-      </div>
-    </div>
+   
     
 <div class="learn-more">
   <div class="container">
