--- a/views/notice_bar.erb
+++ b/views/notice_bar.erb
@@ -1,6 +1,7 @@
-<div class="noticebar-setup">
+
+<div style="height: 30px; width: auto; background: #1e2c5a; box-shadow: 0px 3px 5px; ">
   <div class="container">
-    <a href="http://notice-bar.herokuapp.com"><img src="http://cdn.shopify.com/s/files/1/0536/7125/files/header-logo.png?8"/></a>
-    <p id="notice-bar-content"><%= heading_text %> <a href="<%= link_address %>"><%= link_text %></a></p>
+    <a href="http://notice-bar.herokuapp.com"><img src="http://cdn.shopify.com/s/files/1/0536/7125/files/header-logo.png?8" style="height: 25px; margin-left: 5px; margin-top:2px; float: left;"/></a>
+    <p id="notice-bar-content" style=" color: #fff; text-align: center; font-size: 16px; "> <%= heading_text %> <a href="<%= link_address %>" style="color: #00b0ff;"><%= link_text %></a></p>
   </div>
 </div>
