--- a/views/install.erb
+++ b/views/install.erb
@@ -47,7 +47,7 @@
     <div class="learn-more">
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <h3>Easy to Install</h3>
             <p>Install yourself with our quick video, or have us do it for you</p>
             <p>
@@ -55,13 +55,13 @@
             </p>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <h3>Sell More</h3>
               <p>Ensure Customers notice your sales and make them more likely to buy</p>
             <p><a href="#">Learn more</a></p>
           </div>
 
-          <div class="col-md-4">
+          <div class="col-lg-4">
             <h3>Fully Customizable</h3>
               <p>No Coding Necessary, we let you fully personalize the Notice Bar whenever you want</p>
               <p><a href="#">Learn more about Personalization</a></p>
